[gd_scene load_steps=14 format=3 uid="uid://dbkajr0njymw7"]

[ext_resource type="Script" uid="uid://trsacck3dfpp" path="res://scenes/objects/closet/closet.gd" id="1_yeyky"]
[ext_resource type="PackedScene" uid="uid://b5fgo4ue2d642" path="res://scenes/components/award/Award.tscn" id="2_lr6w4"]
[ext_resource type="Texture2D" uid="uid://c1kctsoqsq5ik" path="res://assets/Objects/closet.png" id="2_nu32p"]
[ext_resource type="PackedScene" uid="uid://oag62unyuoxe" path="res://scenes/objects/flour/flour_resource.tscn" id="3_iw7ma"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nu32p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nu32p"]
atlas = ExtResource("2_nu32p")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3alj"]
atlas = ExtResource("2_nu32p")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cu00"]
atlas = ExtResource("2_nu32p")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkebo"]
atlas = ExtResource("2_nu32p")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k60wa"]
atlas = ExtResource("2_nu32p")
region = Rect2(192, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_yeyky"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nu32p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3alj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cu00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkebo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k60wa")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iw7ma"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d2lo6"]
bg_color = Color(0, 0.7216547, 0.30074775, 1)

[node name="Closet" type="Node2D"]
script = ExtResource("1_yeyky")

[node name="Award" parent="." instance=ExtResource("2_lr6w4")]
award_scene = ExtResource("3_iw7ma")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 0
visibility_layer = 2
scale = Vector2(2.2800007, 2.3199983)
shape = SubResource("RectangleShape2D_nu32p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yeyky")
animation = &"open"
frame = 1
frame_progress = 0.8519204

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="ProgressBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(24, 4)
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = -8.0
pivot_offset = Vector2(12, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_iw7ma")
theme_override_styles/fill = SubResource("StyleBoxFlat_d2lo6")
max_value = 1.0
value = 0.5
show_percentage = false

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
